full english 0.2 completed strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,4 +223,57 @@
     <string name="mark_as_complete_label">Mark as Complete</string>
     <string name="toast_mixed_selection_warning">Cannot change status for a mixed selection of tasks.</string>
     <string name="no_tasks_yet">No tasks yet. Tap \'+\' to add one!</string>
+
+    <string name="due_date_format">Due: %s</string>
+    <string name="empty_state_icon">Empty state icon</string>
+    <string name="apiary_details">Apiary Details</string>
+    <string name="initial_hives_for_new_apiaries">Initial Hives (for new apiaries)</string>
+    <string name="number_of_hives">Number of Hives</string>
+    <string name="quantity">Quantity</string>
+    <string name="hive_characteristics">Hive Characteristics</string>
+    <string name="other_material">Other Material</string>
+    <string name="hive_type">Hive Type</string>
+    <string name="other_hive_type">Other Hive Type</string>
+    <string name="other_frame_type">Other Frame Type</string>
+    <string name="other_breed">Other Breed</string>
+    <string name="other_color">Other Color</string>
+    <string name="last_inspection_date_optional">Last Inspection Date (Optional)</string>
+    <string name="save_hive">Save Hive</string>
+    <string name="cancel">Cancel</string>
+    <string name="task_title">Task Title</string>
+    <string name="description_optional">Description (Optional)</string>
+    <string name="due_date_amp_time_optional"><![CDATA[Due Date & Time (Optional)]]></string>
+    <string name="set_reminder">Set Reminder</string>
+    <string name="edit_apiary_string">Edit apiary</string>
+    <string name="add_new_hive">Add new hive</string>
+    <string name="no_hives_added_yet_tap_to_add_one">No hives added yet. Tap \'+\' to add one!</string>
+    <string name="only_filled_fields_will_be_updated_leave_fields_blank_to_keep_existing_values">Only filled fields will be updated. Leave fields blank to keep existing values.</string>
+    <string name="bulk_edit_hives_string">Bulk Edit Hives</string>
+    <string name="hive_type_string">Hive Type</string>
+    <string name="frame_type">Frame Type</string>
+    <string name="number_of_frames">Number of Frames</string>
+    <string name="automatically_number_selected_hives">Automatically Number Selected Hives</string>
+    <string name="starting_hive_number">Starting Hive Number</string>
+    <string name="ending_hive_number">Ending Hive Number</string>
+    <string name="breed">Breed</string>
+    <string name="last_inspection_date_optional_string">Last Inspection Date (Optional)</string>
+    <string name="notes_optional">Notes (Optional)</string>
+    <string name="apply_changes">Apply Changes</string>
+    <string name="cancel_string">Cancel</string>
+    <string name="add_new_apiary_string">Add new apiary</string>
+    <string name="no_apiaries_added_yet_tap_to_add_one">No apiaries added yet. Tap \'+\' to add one!</string>
+    <string name="add_new_inspection">Add new inspection</string>
+    <string name="dark_theme">Dark Theme</string>
+    <string name="exit_app">Exit App</string>
+    <string name="statistic_type">Statistic Type</string>
+    <string name="total_apiaries">Total Apiaries</string>
+    <string name="total_hives">Total Hives</string>
+    <string name="avg_hives">Avg. Hives</string>
+    <string name="add_new_task">Add new task</string>
+    <string name="edit_apiary_string_2">Edit apiary</string>
+    <string name="edit_hive_string">Edit hive</string>
+    <string name="home">Home</string>
+    <string name="stats">Stats</string>
+    <string name="to_do">To-Do</string>
+    <string name="application">Application</string>
 </resources>
