--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
         <item>Carpathian</item>
         <item>Stepp</item>
         <item>Italian</item>
+        <item>Local Hybrid</item>
         <item>Other</item>
     </string-array>
     <string name="frames_title">Frames</string>
@@ -238,7 +239,7 @@
     <string name="other_breed">Other Breed</string>
     <string name="other_color">Other Color</string>
     <string name="last_inspection_date_optional">Last Inspection Date (Optional)</string>
-    <string name="save_hive">Save Hive</string>
+    <string name="save_hive">Save</string>
     <string name="cancel">Cancel</string>
     <string name="task_title">Task Title</string>
     <string name="description_optional">Description (Optional)</string>
@@ -276,4 +277,115 @@
     <string name="stats">Stats</string>
     <string name="to_do">To-Do</string>
     <string name="application">Application</string>
+    <string name="language_title">Language</string>
+    <string name="language_dialog_title">Select Language</string>
+    <string name="move_hive_s_to">Move %1$d Hive(s) To…</string>
+    <string name="starting_number_must_be_a_positive_number">Starting number must be a positive number</string>
+    <string name="edit_hive">Edit Hive</string>
+    <string name="hive_not_found">Hive not found!</string>
+    <string name="add_new_hive_string">Add New Hive</string>
+    <string name="hive_updated_successfully">Hive updated successfully!</string>
+    <string name="failed_to_save_hive_s_please_try_again">Failed to save hive(s). Please try again.</string>
+    <string name="other">Other</string>
+    <string name="other_1">Other</string>
+    <string name="other_2">Other</string>
+    <string name="other_3">Other</string>
+    <string name="other_4">Other</string>
+    <string name="other_5">Other</string>
+    <string name="other_6">Other</string>
+    <string name="other_7">Other</string>
+    <string name="other_8">Other</string>
+    <string name="other_9">Other</string>
+    <string name="other_10">Other</string>
+    <string name="quantity_must_be_a_positive_number">Quantity must be a positive number</string>
+    <string name="apiary_date_updated">Apiary date updated!</string>
+    <string name="apiaries">apiaries</string>
+    <string name="unknown_apiary">Unknown Apiary</string>
+    <string name="unknown_apiary_string">Unknown Apiary</string>
+    <string name="hive_moved_from_to">Hive moved from \'%1$s\' to \'%2$s\'.</string>
+    <string name="hive_relocation">Hive Relocation</string>
+    <string name="imported">%1$s (Imported)</string>
+    <string name="task_reminder">Task Reminder</string>
+    <string name="task_reminders">Task Reminders</string>
+    <string name="channel_for_pasika_task_reminders">Channel for Pasika task reminders</string>
+    <string name="notification_permission_denied_reminders_will_not_work">Notification permission denied. Reminders will not work.</string>
+    <string name="title_cannot_be_empty">Title cannot be empty</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="no_tasks_selected">No tasks selected.</string>
+    <string name="add_task">Add Task</string>
+    <string name="task_deleted">Task deleted</string>
+    <string name="undo_string">UNDO</string>
+    <string name="select_tasks">Select Tasks</string>
+    <string name="to_do_list">To-Do List</string>
+    <string name="delete_selected_tasks">Delete Selected Tasks</string>
+    <string name="are_you_sure_you_want_to_delete_selected_tasks">Are you sure you want to delete %1$d selected tasks?</string>
+    <string name="tasks_deleted">%1$d tasks deleted.</string>
+    <string name="edit_apiary_again">Edit Apiary</string>
+    <string name="add_new_apiary_again">Add New Apiary</string>
+    <string name="apiary_and_hives_added">Apiary and hives added!</string>
+    <string name="apiary_updated">Apiary updated!</string>
+    <string name="error">Error: %1$s</string>
+    <string name="please_enter_a_valid_hive_number_range">Please enter a valid hive number range.</string>
+    <string name="selected">%1$d Selected</string>
+    <string name="apiary_not_found">Apiary not found!</string>
+    <string name="hives_moved_successfully">Hives moved successfully.</string>
+    <string name="failed_to_move_hives">Failed to move hives.</string>
+    <string name="apiary_exported_successfully_to_downloads_pasika">Apiary exported successfully to Downloads/Pasika.</string>
+    <string name="export_failed">Export failed.</string>
+    <string name="no_hives_selected_for_editing_strings">No hives selected for editing.</string>
+    <string name="no_hives_selected_for_deletion_string">No hives selected for deletion.</string>
+    <string name="no_hives_selected_to_move">No hives selected to move.</string>
+    <string name="no_other_apiaries_to_move_to">No other apiaries to move to.</string>
+    <string name="move_hive_s_to_string">Move %1$d Hive(s) To...</string>
+    <string name="cannot_swipe_to_delete_in_multi_select_mode">Cannot swipe to delete in multi-select mode.</string>
+    <string name="delete_hive">Delete Hive</string>
+    <string name="are_you_sure_you_want_to_delete_hive">Are you sure you want to delete Hive %1$s?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel_again">Cancel</string>
+    <string name="delete_selected_hives">Delete Selected Hives</string>
+    <string name="are_you_sure_you_want_to_delete_selected_hives">Are you sure you want to delete %1$d selected hives?</string>
+    <string name="delete_again">Delete</string>
+    <string name="hives_deleted">%1$d hives deleted.</string>
+    <string name="cancel_once_again">Cancel</string>
+    <string name="hives_updated_successfully">Hives updated successfully!</string>
+    <string name="no_hives_selected_for_bulk_editing">No hives selected for bulk editing.</string>
+    <string name="bulk_edit_hives_again">Bulk Edit Hives</string>
+    <string name="apiary_imported_successfully">Apiary imported successfully.</string>
+    <string name="import_failed_invalid_file_or_format">Import failed. Invalid file or format.</string>
+    <string name="no_apiaries_selected">No apiaries selected.</string>
+    <string name="no_apiaries_selected_string">No apiaries selected.</string>
+    <string name="select_apiaries">Select Apiaries</string>
+    <string name="apiaries_deleted">%1$d apiaries deleted.</string>
+    <string name="add_new_inspection_string">Add New Inspection</string>
+    <string name="edit_inspection">Edit Inspection</string>
+    <string name="inspection_not_found">Inspection not found!</string>
+    <string name="inspection_saved_successfully">Inspection saved successfully!</string>
+    <string name="failed_to_save_inspection_please_try_again">Failed to save inspection. Please try again.</string>
+    <string name="inspections_for_hive">Inspections for Hive #%1$s</string>
+    <string name="successfully_exported_to_downloads_folder">Successfully exported to Downloads folder.</string>
+    <string name="export_failed_no_inspections_to_export">Export failed. No inspections to export.</string>
+    <string name="export_as_csv">Export as CSV</string>
+    <string name="export_as_pdf">Export as PDF</string>
+    <string name="delete_inspection">Delete Inspection</string>
+    <string name="are_you_sure_you_want_to_delete_this_inspection_record">Are you sure you want to delete this inspection record?</string>
+    <string name="delete_string">Delete</string>
+    <string name="inspection_deleted">Inspection deleted.</string>
+    <string name="cancel_once">Cancel</string>
+    <string name="settings">Settings</string>
+    <string name="exit_application">Exit Application</string>
+    <string name="are_you_sure_you_want_to_exit_the_application">Are you sure you want to exit the application?</string>
+    <string name="exit">Exit</string>
+    <string name="cancel_what">Cancel</string>
+    <string name="bulk_edit_apiaries">Bulk Edit Apiaries</string>
+    <string name="apiaries_updated_successfully">Apiaries updated successfully</string>
+    <string name="failed_to_update_apiaries">Failed to update apiaries</string>
+    <string name="at_least_one_field_must_be_filled_to_update">At least one field must be filled to update.</string>
+    <string name="exit_application_string">Exit Application</string>
+    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
+    <string name="exit_string">Exit</string>
+    <string name="cancel_enough">Cancel</string>
+    <string name="an_unknown_error_occurred">An unknown error occurred.</string>
+    <string name="apiary_name_cannot_be_empty">Apiary Name cannot be empty.</string>
+    <string name="location_cannot_be_empty">Location cannot be empty.</string>
+    <string name="cannot_change_status_for_a_mixed_selection_of_tasks">Cannot change status for a mixed selection of tasks.</string>
 </resources>
