--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,4 +338,11 @@
 
     <string name="pdf_title">Inspection History of the Hive #%1$s</string>
 
+    <string name="pdf_report_date">Date</string>
+
+    <string name="contact_title">Contacts</string>
+    <string name="contact_email_address" translatable="false">always.stung.software@gmail.com</string>
+
+    <string name="error_no_email_app">No email app found.</string>
+
 </resources>
