updated toml + crashlytics

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -342,7 +342,18 @@
 
     <string name="contact_title">Контакти</string>
 
-    <string name="error_no_email_app">No email app found.</string>
+    <string name="error_no_email_app">Не знайдено поштового додатку.</string>
+    <string name="email_message">Будь ласка, у своєму зверненні вкажіть:
+
+будь-які відгуки чи ідеї;
+
+проблеми або помилки, з якими ви зіткнулися;
+
+пропозиції щодо нових функцій або покращень;
+
+пропозицій щодо співпраці.
+
+Якщо маєте скріншоти, логи або інші файли, які допоможуть проілюструвати ваші питання, прикріпіть їх до листа.</string>
 
 
 </resources>
