--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -361,5 +361,7 @@
     <string name="update_all">Оновити усі</string>
     <string name="just_this_one">Тільки цей</string>
 
+    <string name="description_drag_to_reorder">Перетягніть, щоб змінити порядок</string>
+
 
 </resources>
